--- a/result.html
+++ b/result.html
@@ -585,8 +585,10 @@
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#fff" role="presentation" viewBox="0 0 48 48" class="mr-[0.1rem] h-5 w-5 text-white first:ml-[0.2rem] last:mr-[0.2rem]"><path d="M42 9.5A1.5 1.5 0 0040.5 8h-10A1.5 1.5 0 0029 9.5v10a1.5 1.5 0 003 0v-7a14 14 0 11-8-2.5V7a17 17 0 1010.92 4h5.58A1.5 1.5 0 0042 9.5z" data-name="360"></path></svg>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#fff" role="presentation" viewBox="0 0 48 48" class="mr-[0.1rem] h-5 w-5 text-white first:ml-[0.2rem] last:mr-[0.2rem]"><path d="M39.16 23.19a1.48 1.48 0 00-.51-.48l-.11-.09L13.32 6.24l-.16-.08h-.09l-.18-.06h-.11L12.6 6H12.19a1.49 1.49 0 00-1 .65 1.47 1.47 0 00-.1.2 1.46 1.46 0 00-.07.21v.08a1.48 1.48 0 000 .2V40.52a1.49 1.49 0 000 .2v.08a1.46 1.46 0 00.07.21 1.48 1.48 0 00.11.21 1.49 1.49 0 001 .65H12.9l.18-.06h.08l.16-.08 25.41-16.5a1.5 1.5 0 00.43-2.04zM14 10.26L35.16 24 14 37.74z"></path></svg>
                             </div>
-                            <span class="result-box__new">
-                                Nieuw
+                            <span class="result-box_new-box">
+                                <span class="result-box__new">
+                                    Nieuw
+                                </span>
                             </span>
                         </a>
                         <div class="result__box__info">
@@ -627,8 +629,10 @@
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#fff" role="presentation" viewBox="0 0 48 48" class="mr-[0.1rem] h-5 w-5 text-white first:ml-[0.2rem] last:mr-[0.2rem]"><path d="M42 9.5A1.5 1.5 0 0040.5 8h-10A1.5 1.5 0 0029 9.5v10a1.5 1.5 0 003 0v-7a14 14 0 11-8-2.5V7a17 17 0 1010.92 4h5.58A1.5 1.5 0 0042 9.5z" data-name="360"></path></svg>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#fff" role="presentation" viewBox="0 0 48 48" class="mr-[0.1rem] h-5 w-5 text-white first:ml-[0.2rem] last:mr-[0.2rem]"><path d="M39.16 23.19a1.48 1.48 0 00-.51-.48l-.11-.09L13.32 6.24l-.16-.08h-.09l-.18-.06h-.11L12.6 6H12.19a1.49 1.49 0 00-1 .65 1.47 1.47 0 00-.1.2 1.46 1.46 0 00-.07.21v.08a1.48 1.48 0 000 .2V40.52a1.49 1.49 0 000 .2v.08a1.46 1.46 0 00.07.21 1.48 1.48 0 00.11.21 1.49 1.49 0 001 .65H12.9l.18-.06h.08l.16-.08 25.41-16.5a1.5 1.5 0 00.43-2.04zM14 10.26L35.16 24 14 37.74z"></path></svg>
                             </div>
-                            <span class="result-box__new">
-                                Nieuw
+                            <span class="result-box_new-box">
+                                <span class="result-box__new">
+                                    Nieuw
+                                </span>
                             </span>
                         </a>
                         <div class="result__box__info">
@@ -669,8 +673,10 @@
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#fff" role="presentation" viewBox="0 0 48 48" class="mr-[0.1rem] h-5 w-5 text-white first:ml-[0.2rem] last:mr-[0.2rem]"><path d="M42 9.5A1.5 1.5 0 0040.5 8h-10A1.5 1.5 0 0029 9.5v10a1.5 1.5 0 003 0v-7a14 14 0 11-8-2.5V7a17 17 0 1010.92 4h5.58A1.5 1.5 0 0042 9.5z" data-name="360"></path></svg>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#fff" role="presentation" viewBox="0 0 48 48" class="mr-[0.1rem] h-5 w-5 text-white first:ml-[0.2rem] last:mr-[0.2rem]"><path d="M39.16 23.19a1.48 1.48 0 00-.51-.48l-.11-.09L13.32 6.24l-.16-.08h-.09l-.18-.06h-.11L12.6 6H12.19a1.49 1.49 0 00-1 .65 1.47 1.47 0 00-.1.2 1.46 1.46 0 00-.07.21v.08a1.48 1.48 0 000 .2V40.52a1.49 1.49 0 000 .2v.08a1.46 1.46 0 00.07.21 1.48 1.48 0 00.11.21 1.49 1.49 0 001 .65H12.9l.18-.06h.08l.16-.08 25.41-16.5a1.5 1.5 0 00.43-2.04zM14 10.26L35.16 24 14 37.74z"></path></svg>
                             </div>
-                            <span class="result-box__new">
-                                Nieuw
+                            <span class="result-box_new-box">
+                                <span class="result-box__new">
+                                    Nieuw
+                                </span>
                             </span>
                         </a>
                         <div class="result__box__info">
