--- a/detail.html
+++ b/detail.html
@@ -44,6 +44,13 @@
     </header>
 
     <main>
+        <div class="breadrcrumbs">
+            <div class="container breadrcrumbs-flex">
+                <a href="#" class="breadrcrumbs-item">Home</a>
+                <a href="#" class="breadrcrumbs-item">Den Bosch</a>
+                <div class="breadrcrumbs-item">Verwersstraat 47</div>
+            </div>
+        </div>
         <section class="gallery-section">
             <div class="gallery">
     
