--- a/detail.html
+++ b/detail.html
@@ -232,6 +232,17 @@
                         </div>
                     </div>
 
+                    <div class="object-post__house">
+                        <div class="post-house_block">
+                            <div class="post-house__title">Wat is jouw huis waard?</div>
+                            <p class="post-house__text">Krijg direct inzicht in de waarde en populariteit van je huis door je adres toe te voegen in Mijn Huis.</p>
+                            <a href="#" class="post-house__button">Voeg mijn huis toe</a>
+                        </div>
+                        <div>
+                            <img src="./img/house.svg" alt="">
+                        </div>
+                    </div>
+
                     <div class="object__burt">
                         <div class="object-info__titles">Buurt</div>
                         <div class="object-burt__box">
@@ -315,6 +326,36 @@
                             </a>
                         </div>
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="similar-object__section">
+            <div class="container">
+                <div class="object-info__titles">Vergelijkbaar in de buurt</div>
+                <div class="object-info__settings">
+                    <div class="active">Te koop</div>
+                    <div>Verkocht</div>
+                </div>
+                <div class="similar-object__flex">
+                    <a href="#" class="similar-object__box">
+                        <img src="./img/home1.jpg" alt="">
+                        <div class="similar-object__name">Hintham 16</div>
+                        <div class="similar-object__address">5246 AG Rosmalen</div>
+                        <div class="similar-object__price">€ 2.500.000 k.k.</div>
+                    </a>
+                    <a href="#" class="similar-object__box">
+                        <img src="./img/home1.jpg" alt="">
+                        <div class="similar-object__name">Hintham 16</div>
+                        <div class="similar-object__address">5246 AG Rosmalen</div>
+                        <div class="similar-object__price">€ 2.500.000 k.k.</div>
+                    </a>
+                    <a href="#" class="similar-object__box">
+                        <img src="./img/home1.jpg" alt="">
+                        <div class="similar-object__name">Hintham 16</div>
+                        <div class="similar-object__address">5246 AG Rosmalen</div>
+                        <div class="similar-object__price">€ 2.500.000 k.k.</div>
+                    </a>
                 </div>
             </div>
         </section>
