--- a/detail.html
+++ b/detail.html
@@ -164,6 +164,9 @@
                             <div class="object-info__list-item">
                                 <div>Vraagprijs</div>
                                 <div class="object-info__list-right">
+                                    <span class="object-info__list-label">
+                                        <span>A</span>
+                                    </span>
                                     <span>Beschikbaar</span>
                                 </div>
                             </div>
