--- a/result.html
+++ b/result.html
@@ -849,10 +849,10 @@
             }); 
 
 
-            $(document).mouseup( function(e){ // событие клика по веб-документу
-                var div = $( ".result__filters" ); // тут указываем ID элемента
-                if ( !div.is(e.target) // если клик был не по нашему блоку
-                    && div.has(e.target).length === 0 ) { // и не по его дочерним элементам
+            $(document).mouseup( function(e){
+                var div = $( ".result__filters" ); 
+                if ( !div.is(e.target) 
+                    && div.has(e.target).length === 0 ) { 
                         $(".result__filters").removeClass('active');
                 }
             });
